fix dark mode

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,5 @@
 #home{
-    background: url('../assets/images/home.jpg');
-    background-repeat: no-repeat;
+    background: url('../assets/images/home3.jpg');
     background-size: cover;
     height: 100vh;
     width: auto;
